--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -5,6 +5,7 @@
     --white: #fff;
     --black: #000;
     --red: #ED4C67;
+    --teal: #00b894;
     --gray-background: rgb(87, 101, 116, .1);
     --overlay: rgba(0, 0, 0, .7);
 
