--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
-    --blue-grey: #c8d6e5;
+    --blue-grey: #eaf1f8;
     --blue-grey--dark: #576574;
-    --blue--accent: #1289A7;
+    --blue--accent: #003f40;
     --white: #fff;
     --black: #000;
     --red: #ED4C67;
